# youtube-summarizer-llama3

./: LICENSE  README.md  main-v2.ipynb  main.ipynb  main.py  ollama-basic-test.ipynb  pyproject.toml  requirements-v2.txt  requirements.txt  sample-text.txt
