[tool.poetry]
name = "youtube-summarizer-llama3"
version = "0.1.0"
description = ""
authors = ["Pisek <psk.light@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
youtube-transcript-api = "^0.6.3"
transformers = "^4.47.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
